refactor: pre-1.0 hardening H2 — back-compat purge + storage consistency
Retire the ~/.jk/lib engine-jar slot (versions/<v> + CAS is the only
layout) and the legacy flat-socket compat pointer (endpoint file is the
only resolution path). Purge pre-1.0 aliases and migrations: verify-build,
check, --rerun/--refresh (+ env/TOML forms), --force-recompile, jk idea,
jkx deactivate unsets, workspace members= synonym, calibration.toml move,
JkMavenLocalRepo m2-mirror sweeper, JdkList identifier-only fallback,
JkEnv absolute-path identifiers, .test-stamp exclusion, installLocalCas.

JkConfig drops rerun/refresh but gains an internal `rebuild` component:
the audit misread rerun as a pure alias — it is jk verify's
rebuild-without-refetch lane, and folding it into force would have made
verify network-dependent.

CacheGc/LruEvictor now sweep named repo stores like CasSweep (shared
RepoArtifactStore.removeShasFromAll); fixed removeShas deleting under a
lazy Files.walk. New AtomicWrites helper; Cas.putStream temp files land
in the shard dir, not the CAS root. deleteRecursively consolidated onto
PathUtil where module deps allow.