@@ -19,15 +19,17 @@ class CacheGcTest {
     private static final long DAY = 24L * 60 * 60 * 1000;
 
     /**
-     * Seed both the CAS and the legacy {@code <cache>/repo/} mirror {@link CacheGc} sweeps —
-     * nothing writes that mirror anymore, so tests populate it directly.
+     * Seed both the CAS and a named repo store ({@code <cache>/repos/central/}) — {@link CacheGc}
+     * keeps every named store in lock-step with the CAS.
      */
     private static Path seed(Path cache, String body, Coordinate coord) throws IOException {
         Cas cas = new Cas(cache);
         Path blob = cas.put(body.getBytes(StandardCharsets.UTF_8));
-        Path mirrored = cache.resolve("repo").resolve(MavenLayout.artifactPath(coord));
-        Files.createDirectories(mirrored.getParent());
-        Files.write(mirrored, body.getBytes(StandardCharsets.UTF_8));
+        String rel = MavenLayout.artifactPath(coord);
+        Path stored = cache.resolve("repos/central").resolve(rel);
+        Files.createDirectories(stored.getParent());
+        Files.write(stored, body.getBytes(StandardCharsets.UTF_8));
+        Files.writeString(Path.of(stored + ".sha256"), Hashing.sha256Hex(body.getBytes(StandardCharsets.UTF_8)));
         return blob;
     }
 
@@ -44,7 +46,7 @@ class CacheGcTest {
         assertThat(report.purgedBlobs()).isEqualTo(1);
         assertThat(report.repoLinksRemoved()).isEqualTo(1);
         assertThat(new Cas(cache).contains(hex)).isFalse();
-        assertThat(cache.resolve("repo/com/example/widget/1.0/widget-1.0.jar")).doesNotExist();
+        assertThat(cache.resolve("repos/central/com/example/widget/1.0/widget-1.0.jar")).doesNotExist();
         // The purged sha's entry is gone from the access log.
         assertThat(Files.readString(cache.resolve(".access.log"))).doesNotContain(hex);
     }
@@ -109,6 +111,6 @@ class CacheGcTest {
 
         assertThat(report.purgedBlobs()).isEqualTo(1);
         assertThat(new Cas(cache).contains(hex)).isTrue(); // not actually deleted
-        assertThat(cache.resolve("repo/com/example/widget/1.0/widget-1.0.jar")).exists();
+        assertThat(cache.resolve("repos/central/com/example/widget/1.0/widget-1.0.jar")).exists();
     }
 }
